Fix alignment of reset and tutorial

--- a/src/main/java/assets/css/custom.css
+++ b/src/main/java/assets/css/custom.css
@@ -105,7 +105,7 @@
     float: right;
     margin-bottom: 35px;
     margin-right: 30px;
-    margin-top: -10px;
+    margin-top: -7px;
     display: inline-block;
     border-bottom: 1px dotted #3a3a3a;
 }
